Added a few details to BCE example

--- a/ieee_spm/adjoints_in_gradients.bib
+++ b/ieee_spm/adjoints_in_gradients.bib
@@ -67,6 +67,13 @@
   publisher={IEEE}
 }
 
+@phdthesis{schmidt_2010,
+  title={Graphical model structure learning with l1-regularization},
+  author={Schmidt, Mark},
+  year={2010},
+  school={UNIVERSITY OF BRITISH COLUMBIA (Vancouver}
+}
+
 
 @inproceedings{romberg_2013,
   title={Multichannel blind deconvolution using low rank recovery},
